--- a/report/report.Rmd
+++ b/report/report.Rmd
@@ -1,64 +1,135 @@
 ---
-title: CSE 7350 Final Report
+title: Constructing Bipartite Backbones in Wireless Sensory Networks
 author:
-  - name: Alice Anonymous
-    email: alice@example.com
-    affiliation: Some Institute of Technology
-  - name: Bob Security
-    email: bob@example.com
-    affiliation: Another University
+  - name: Will Spurgin
+    email: wspurgin@smu.edu
+    affiliation: Southern Methodist University - Bobby B. Lyle School of Engineering
 abstract: |
-  This is the abstract.
-
-  It consists of two paragraphs.
-bibliography: sigproc.bib
-output: rticles::acm_article
+  TODO FILL IN ABSTRACT
+bibliography: report.bib
+#output: rticles::elsevier_article
+#cls: elsevier-vancouver.csl
+csl: elsevier-vancouver.csl
+output:
+  rticles::elsevier_article:
+    keep_tex: true
 ---
 
 
+# Executive Summary
 
-# Introduction 
-Lorem ipsum dolor sit[@meier2012] amet, consectetur adipiscing[@fenner2012a] elit. Pellentesque rhoncus ut tellus eu tristique. Duis pharetra velit vitae viverra elementum. Nulla metus dui, pulvinar id enim at, pellentesque semper ipsum. Phasellus cursus dignissim ipsum, sed congue orci pretium quis. Maecenas rhoncus leo a cursus euismod. Fusce a erat eu ipsum tristique tempus at sed tortor. Aliquam erat volutpat. Donec at pretium lorem. Donec pretium nunc id nunc bibendum convallis. Phasellus quis enim id massa feugiat egestas hendrerit sollicitudin nibh. Sed blandit eros id tellus porta, eget ullamcorper urna posuere. Pellentesque laoreet lacus nibh, a mattis libero viverra sit amet. Sed vitae diam interdum, pharetra neque sit amet, dictum lectus.
+## Introduction
 
-Donec massa justo, ultricies quis facilisis sed, tristique nec metus. Vestibulum id condimentum diam. Integer semper augue id porttitor ultrices. Cras vulputate felis eu diam porttitor, ac pulvinar nisi imperdiet. Donec eros felis, imperdiet vel malesuada at, varius et quam. Phasellus facilisis non risus eu placerat. Sed ac mollis lorem.
+Imagine a scenario in which you are part of a team monitoring the volcano Mount
+Pinatubo for surface temperature and seismic activity. Further, you are given a
+multitude of low cost short-range wireless sensors to place around an area of
+the volcano to take these measurements. Since Mt. Pinatubo is somewhat hard to
+reach, you decide to drop these sensors from a helicopter. After dropping your
+sensors over the area in a uniformly random fashion, you now need to read all
+the data from these sensors.  However, since they are short-range wireless
+sensors, you would have to be sufficiently close to a sensor to read its data.
+However, since all the nodes are wireless, they can communicate their data to
+each other. Ideally, you would rather go to one or relatively few nodes to
+retrieve all the data. The question becomes: to which node(s) do you go?
+
+This fictional scenario is the problem setting to which this report provides
+solution discussion, reduction of those solution to practice, and a variety of
+benchmark measurements. Formally, this report examines the construction of
+backbones of communication in Wireless Sensor Networks (WSNs)
+modeled as Random Geometric Graphs (RGGs). The results presented in this report
+indicate that, generally, RGGs (and thus WSNs) with uniformly distributed nodes
+can achieve near __100%__ coverage from a bipartite backbone using the methods
+described in this report. The use of the methods presented in this report are
+strongly recommended for any application involving WSNs or scenarios that can be
+modeled as RGGs. Study of this work is not new[@mahjoub2010; @mahjoub2012], and
+much of that work corroborates the findings of this report.
+
+In the presentation of this report, several tables, and graphics are used to
+make the seeing the merit of the results effortless. For all benchmarks, the
+following plots are included: A plot of the RGG (with edges), a plot of the node
+with lowest degree, a plot of the node with highest degree, a plot of the color
+classes frequency, a plot of the degree distributions, a plot of the degree when
+deleted versus original degree of the Smallest Last ordering algorithm, and
+lastly the plot of the two major backbones of an RGG. Additionally, a table is
+provided with summary information about the RGG (e.g. number of edges, vertices,
+desired average degree, actual average degree, etc.). An abbreviated table of
+results is given below in Table $\ref{tab:abb_res}$.
+
+```{r include=FALSE}
+library(knitr)
+library(readr)
+library(dplyr)
+
+# Read in Generation Stats Data
+stat_files <- dir("../") %>% grep("*_gen_stats.csv", ., value=TRUE) %>%
+    paste("..", ., sep="/")
+num_stat_files <- length(stat_files)
+if (num_stat_files > 0) {
+  stats_df <- read_csv(stat_files[1])
+  if (num_stat_files > 1) {
+    for (i in 2:num_stat_files) {
+      rbind(stats_df, read_csv(stat_files[i]))
+    }
+  }
+}
+
+# Output data as a row table (since we have more vertical room).
+stats_mat <- t(as.matrix(stats_df))
+rownames(stats_mat) <- c("Number of Nodes", "Desired Avg. Degree", "Shape",
+                       "Actual Avg. Degree", "Radius", "Number of Edges",
+                       "Max Degree", "Min Degree")
+colnames(stats_mat) <- NULL
+```
+
+```{r abb_res, echo=FALSE, results='asis'}
+  kable(stats_mat, caption="Abbreviated Results", format = "latex", align="l")
+```
+
+## Environment Description
+
+- Hardware:
+    - Apple MacBook Pro (Retina, Mid 2012)
+    - Processor: 2.6 GHz Intel Core i7 (with turbo boost up to 3.3GHz)
+    - Memory: 8 GB 1600 MHz DDR3
+    - Intel HD Graphics 4000 1536 MB
+    - Storage: 500.28 GB Solid State Drive, SATA Connection.
+- Language: C++
+    - Compilers:
+      - GNU GCC 5.2.0 (Homebrew gcc 5.2.0 build)
+      - Clang 8, Apple LLVM version 8.0.0 (clang-800.0.38)
+- Graphical Tool:
+    - R[@r2015] version 3.3.1 (2016-06-21) -- (codename "Bug in Your Hair")
+
+- Resource Utilization:
+    - CPU exponential from 0% to 16%
+    - Memory 0 MB to 40 MB
 
 # Evaluation
-Nullam semper imperdiet orci, at lacinia est aliquet et. Sed justo nibh, aliquet et velit at, pharetra consequat velit. Nullam nec ligula sagittis, adipiscing nisl sed, varius massa. Mauris quam ante, aliquet a nunc et, faucibus imperdiet libero. Suspendisse odio tortor, bibendum vel semper sit amet, euismod ac ante. Nunc nec dignissim turpis, ac blandit massa. Donec auctor massa ac vestibulum aliquam. Fusce auctor dictum lobortis. Vivamus tortor augue, convallis quis augue sit amet, laoreet tristique quam. Donec id volutpat orci. Suspendisse at mi vel elit accumsan porta ac ut diam. Nulla ut dapibus quam.
+Nullam semper imperdiet orci, at lacinia est aliquet et. Sed justo nibh, aliquet
+et velit at, pharetra consequat velit. Nullam nec ligula sagittis, adipiscing
+nisl sed, varius massa. Mauris quam ante, aliquet a nunc et, faucibus imperdiet
+libero. Suspendisse odio tortor, bibendum vel semper sit amet, euismod ac ante.
+Nunc nec dignissim turpis, ac blandit massa. Donec auctor massa ac vestibulum
+aliquam. Fusce auctor dictum lobortis. Vivamus tortor augue, convallis quis
+augue sit amet, laoreet tristique quam. Donec id volutpat orci. Suspendisse at
+mi vel elit accumsan porta ac ut diam. Nulla ut dapibus quam.
 
-Sed est odio, ornare in rutrum et, dapibus in urna. Suspendisse varius massa in ipsum placerat, quis tristique magna consequat. Suspendisse non convallis augue. Quisque fermentum justo et lorem volutpat euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi sagittis interdum justo, eu consequat nisi convallis in. Sed tincidunt risus id lacinia ultrices. Phasellus ac ligula sed mi mattis lacinia ac non felis. Etiam at dui tellus.
+Sed est odio, ornare in rutrum et, dapibus in urna. Suspendisse varius massa in
+ipsum placerat, quis tristique magna consequat. Suspendisse non convallis augue.
+Quisque fermentum justo et lorem volutpat euismod. Vestibulum ante ipsum primis
+in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi sagittis
+interdum justo, eu consequat nisi convallis in. Sed tincidunt risus id lacinia
+ultrices. Phasellus ac ligula sed mi mattis lacinia ac non felis. Etiam at dui
+tellus.
 
 # Conclusion
-Duis nec purus sed neque porttitor tincidunt vitae quis augue. Donec porttitor aliquam ante, nec convallis nisl ornare eu. Morbi ut purus et justo commodo dignissim et nec nisl. Donec imperdiet tellus dolor, vel dignissim risus venenatis eu. Aliquam tempor imperdiet massa, nec fermentum tellus sollicitudin vulputate. Integer posuere porttitor pharetra. Praesent vehicula elementum diam a suscipit. Morbi viverra velit eget placerat pellentesque. Nunc congue augue non nisi ultrices tempor.
+Duis nec purus sed neque porttitor tincidunt vitae quis augue. Donec porttitor
+aliquam ante, nec convallis nisl ornare eu. Morbi ut purus et justo commodo
+dignissim et nec nisl. Donec imperdiet tellus dolor, vel dignissim risus
+venenatis eu. Aliquam tempor imperdiet massa, nec fermentum tellus sollicitudin
+vulputate. Integer posuere porttitor pharetra. Praesent vehicula elementum diam
+a suscipit. Morbi viverra velit eget placerat pellentesque. Nunc congue augue
+non nisi ultrices tempor.
 
-# References
-
----
-references:
-- id: meier2012
-  title: Professinal Android 4 Application Development
-  author: 
-  - family: Meier
-    given: Reto
-  type: book
-  publisher: John Wiley & Sons, Inc.
-  issued:
-    year: 2012
-    month: 5
-- id: fenner2012a
-  title: One-click science marketing
-  author:
-  - family: Fenner
-    given: Martin
-  container-title: Nature Materials
-  volume: 11
-  URL: 'http://dx.doi.org/10.1038/nmat3283'
-  DOI: 10.1038/nmat3283
-  issue: 4
-  publisher: Nature Publishing Group
-  page: 261-263
-  type: article-journal
-  issued:
-    year: 2012
-    month: 3
-...
+# References {#references}
 
