--- a/report/report.bib
+++ b/report/report.bib
@@ -2,12 +2,38 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Spurgin at 2016-12-05 09:48:48 -0600 
+%% Created for Will Spurgin at 2016-12-05 13:14:19 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{rMarkdown2015,
+	Author = {JJ Allaire, et al.},
+	Date-Added = {2016-12-05 19:06:12 +0000},
+	Date-Modified = {2016-12-05 19:13:30 +0000},
+	Lastchecked = {12/05/2016},
+	Title = {R Markdown},
+	Url = {http://rmarkdown.rstudio.com},
+	Year = {2015}}
+
+@article{statnet2008,
+	Abstract = {statnet is a suite of software packages for statistical network analysis. The packages implement recent advances in network modeling based on exponential-family random graph models (ERGM). The components of the package provide a comprehensive framework for ERGM-based network modeling, including tools for model estimation, model evaluation, model-based network simulation, and network visualization. This broad functionality is powered by a central Markov chain Monte Carlo (MCMC) algorithm. The coding is optimized for speed and robustness.},
+	Author = {Mark Handcock and David Hunter and Carter Butts and Steven Goodreau and Martina Morris},
+	Date-Added = {2016-12-05 19:00:28 +0000},
+	Date-Modified = {2016-12-05 19:00:35 +0000},
+	Doi = {10.18637/jss.v024.i01},
+	Issn = {1548-7660},
+	Journal = {Journal of Statistical Software},
+	Number = {1},
+	Pages = {1--11},
+	Title = {statnet: Software Tools for the Representation, Visualization, Analysis and Simulation of Network Data},
+	Url = {https://www.jstatsoft.org/index.php/jss/article/view/v024i01},
+	Volume = {24},
+	Year = {2008},
+	Bdsk-Url-1 = {https://www.jstatsoft.org/index.php/jss/article/view/v024i01},
+	Bdsk-Url-2 = {http://dx.doi.org/10.18637/jss.v024.i01}}
 
 @book{tan2005,
 	Address = {Boston, MA, USA},
@@ -81,7 +107,7 @@
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2402.322385}}
 
 @article{mahjoub2012,
-	Author = {Mahjoub, Dhia and Matula, David W.},
+	Author = {Dhia Mahjoub and David W. Matula},
 	Date-Added = {2016-12-01 15:17:22 +0000},
 	Date-Modified = {2016-12-05 14:58:01 +0000},
 	Doi = {http://dx.doi.org/10.1016/j.comcom.2012.02.013},
